OO-4934: retrieve test session after stopping assessment mode (delayed)
Retrieve the running assessment test sessions after the coach stopped an
assessment mode. The process is slightly delayed.